client/stylesheet.css
html {
    min-height:100%;
}

body {
    align-items: center;
    height:75vh;
}

#top-panel {
    border-style: solid;
    border-width: 2px;
    border-color: black;
    min-height: 10vh;
    width: 70%;
    margin: auto;
    position: relative;
}

#top-panel-logged-out, #top-panel-logged-in {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-style: solid;
    border-width: 1px;
    border-color: green;
}

#main-content {
    border-style: solid;
    border-width: 2px;
    border-color: black;
    min-height: 10vh;
    display: flex;
    margin: auto;
    margin-top: -2px;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
    width: 70%;
    position: relative;
}

#logged-in-main-content {
    display: flex;
    margin: auto;
    margin-top: -2px;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#logged-out-main-content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%; 
}

#logged-out-main-content * {
    font-size: 40px;
    margin-left: 20px;
}

.topmenu-item {
    margin: 10px;
}

#logged-in-main-content > div {
    margin: auto;
    padding: 10px;
    width: 90%;
}

.main-content-item {
    width: 100%;
    margin: auto;
    margin-top: 10px;
}

.highlighted-text {
    font-weight: bold;
    font-size: large;
}

.quantity-div {
    text-align: center;
    width: auto;
    align-items: center;
}

table {
    text-align: center;
}

table, th, td {
    border: 1px solid;
    border-collapse: collapse;
    table-layout: fixed;
}

#shopping-cart-total-row {
    text-align: right;
    padding-right: 25%;
    font-weight: bold;
}

#place-order-div {
    text-align: right;
}

#place-order-button {
    font-weight: bold;
}

table#login-table, table#login-table tr td {
    border-style: none;
}

#errorLabel {
    color: red;
}

#login-welcome-text {
    text-decoration: underline;
}

#quantity-input {
    width: 30%;
}

